syntax = "proto3";

package go.v1;

service GoGrpcService {
  rpc Forward(ForwardRequest) returns (ForwardResponse) {}
  rpc Receive(ReceiveRequest) returns (ReceiveResponse) {}
}

message ReceiveRequest {
  string message = 1;
}

message ReceiveResponse {
  string message = 1;
}

message ForwardRequest {
  string to = 1;
  string message = 2;
}

message ForwardResponse {
  string message = 1;
}